# vitest-linter

./: .gitignore  .pre-commit-hooks 2.yaml  .pre-commit-hooks.yaml  .structurelint.yml  Cargo.toml  LICENSE  README.md  action.yml  sonar-project.properties
.cargo/: mutants.toml
.github/workflows/: ci.yml  codebase-review.yml  codeql.yml  merge-gate.yml  mutants.yml  pr-agent.yml  pr-gate.yml  release.yml  vitest-linter-action.yml
.pre-commit-hooks/: .pre-commit-hooks.yaml
benches/: lint_large_corpus.rs
docs/: technical-due-diligence.md
docs/architecture/: ADR-001-project-architecture.md  ADR-002-toolchain.md  ADR-003-quality-gates.md  ADR-004-testing-strategy.md  ADR-005-lint-rule-architecture.md
docs/plans/: 2026-04-26-async-assertion-support.md  2026-04-28-eslint-plugin-vitest-parity.md
docs/specs/: 2026-05-06-playwright-support-design.md
docs/superpowers/plans/: 2026-05-06-playwright-support-and-rule-hardening.md
docs/superpowers/specs/: 2026-04-26-async-assertion-support-design.md  2026-04-26-ci-workflow-design.md  2026-04-26-stub-rules-implementation-design.md  2026-04-28-eslint-plugin-vitest-parity-design.md  2026-05-06-playwright-support-design.md
eslint-plugin-vitest-linter/: README.md  index.js  package.json
eslint-plugin-vitest-linter/lib/: rules.js  runner.js
npm/: install.js  package.json
scripts/: auto-request-reviews.sh  wait-for-reviews.sh
src/: config.rs  engine.rs  lib.rs  main.rs  models.rs  parser.rs  suppression.rs
src/rules/: consistency.rs  dependencies.rs  flakiness.rs  maintenance.rs  mod.rs  no_category.rs  no_rules.rs  playwright.rs  prefer.rs  require.rs  selector_classifier.rs  validation.rs
tests/: corpus.rs  integration_tests.rs
tests/fixtures/mnt_007_focused_test/playwright_test_only/: expected.json  input.spec.ts
vscode/: .vscodeignore  README.md  biome.json  package.json
vscode/src/: extension.ts
