[package]
name = "vitest-linter"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/VidiomTM/vitest-linter"

[dependencies]
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
walkdir = "2"
toml = "0.8"
globset = "0.4"
rayon = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lint_large_corpus"
harness = false

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
install-update = true
# The npm package should have this name
npm-package = "npm"
merge-tarballs = true
signing = "sigstore"
# Where to host releases
hosting = "github"
# Whether to install an updater program
install-updater = false
